hphp/hack/test/typecheck/function_pointer/class_const_dollar_dollar_bad.php.exp
File "class_const_dollar_dollar_bad.php", line 8, characters 22-28:
Function pointers must be explicitly specified (Parsing[1002])
File "class_const_dollar_dollar_bad.php", line 9, characters 6-12:
Invalid argument (Typing[4110])
File "class_const_dollar_dollar_bad.php", line 4, characters 30-32:
Expected int
File "class_const_dollar_dollar_bad.php", line 9, characters 6-12:
But got string
